git@github.com:Erishprajapati/bca_sl_2023_topics.git

--- a/topics/day 3/index.html
+++ b/topics/day 3/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS session day 1</title>
+    <title>Document</title>
 </head>
 <body>
-    <section>This is the JS session for scripting language</section>
-
-    <!-- linking custom external js file-->
-    <script src=""></script>
+    <!--linking java script-->
+    <script src="script.js"></script>
 </body>
 </html>
