--- a/topics/day1/index.html
+++ b/topics/day1/index.html
@@ -4,19 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day one-Navigation</title>
-    <!--external css-->
-    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
 </head>
 <body>
-    <header>DAV HTML Session</header>
-    <nav> 
-        <ul>
-        <li>Home</li>
-        <li>About</li>
-        <li>Contact</li>
-        <li>FAQ</li>
-    </ul>
-    </nav>
+    <!--linking the js-->
+    <link href = "script.js">
 </body>
 </html>
