--- a/exams/string.html
+++ b/exams/string.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!--linking the js-->
-    <link href = "script.js">
+<script src="script.js">
+</script>
 </body>
 </html>
